--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blacktoolbox/react-component-folder",
   "packageName": "react-component-folder",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A tool component for foldering component.",
   "keywords": [
     "blacktoolbox",
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/BlackToolBoxLaboratory/react-component-folder#readme",
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
